--- a/CYPhotoKit/CYPhotoKit/CYPhotoListViewController.xib
+++ b/CYPhotoKit/CYPhotoKit/CYPhotoListViewController.xib
@@ -8,6 +8,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CYPhotoListViewController">
             <connections>
                 <outlet property="collectionView" destination="X61-og-di8" id="ctX-Nb-ZrR"/>
+                <outlet property="countLabel" destination="2UI-yR-zPB" id="SFf-35-bZH"/>
+                <outlet property="finishedButton" destination="lyK-V7-RZB" id="jKB-8Q-3M8"/>
+                <outlet property="previewButton" destination="dEv-3F-r0T" id="xaX-vw-yWl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="X61-og-di8">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CUg-0z-7Tc">
                         <size key="itemSize" width="50" height="50"/>
@@ -30,13 +33,74 @@
                         <outlet property="delegate" destination="-1" id="3UE-lz-00Y"/>
                     </connections>
                 </collectionView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rnl-hM-ecc">
+                    <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dEv-3F-r0T">
+                            <rect key="frame" x="15" y="0.0" width="30" height="44"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                            <state key="normal" title="预览">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="previewButtonClick:" destination="-1" eventType="touchUpInside" id="AJV-Jd-Mv0"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QzY-hB-S2f">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
+                            <color key="backgroundColor" red="0.68235294117647061" green="0.68235294117647061" blue="0.68235294117647061" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="Ghm-ZQ-ea0"/>
+                            </constraints>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2UI-yR-zPB">
+                            <rect key="frame" x="523" y="12" width="20" height="20"/>
+                            <color key="backgroundColor" red="0.0" green="0.68235294117647061" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="1jD-mY-Cvq"/>
+                                <constraint firstAttribute="height" constant="20" id="55y-iY-w4j"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyK-V7-RZB">
+                            <rect key="frame" x="548" y="1" width="37" height="43"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <state key="normal" title=" 完成">
+                                <color key="titleColor" red="0.0" green="0.67843137254901964" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="finishedButtonClick:" destination="-1" eventType="touchUpInside" id="WAP-i1-tV2"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="lyK-V7-RZB" secondAttribute="bottom" id="AV1-qV-t5X"/>
+                        <constraint firstItem="lyK-V7-RZB" firstAttribute="leading" secondItem="2UI-yR-zPB" secondAttribute="trailing" constant="5" id="EDO-co-wW6"/>
+                        <constraint firstItem="lyK-V7-RZB" firstAttribute="top" secondItem="QzY-hB-S2f" secondAttribute="bottom" id="JMa-G3-USn"/>
+                        <constraint firstAttribute="trailing" secondItem="lyK-V7-RZB" secondAttribute="trailing" constant="15" id="OeS-tE-cze"/>
+                        <constraint firstItem="dEv-3F-r0T" firstAttribute="leading" secondItem="Rnl-hM-ecc" secondAttribute="leading" constant="15" id="T3Y-OV-ohf"/>
+                        <constraint firstItem="QzY-hB-S2f" firstAttribute="top" secondItem="Rnl-hM-ecc" secondAttribute="top" id="WX4-Fx-Fe3"/>
+                        <constraint firstAttribute="height" constant="44" id="exW-VB-hqf"/>
+                        <constraint firstItem="QzY-hB-S2f" firstAttribute="leading" secondItem="Rnl-hM-ecc" secondAttribute="leading" id="fWX-t2-ssd"/>
+                        <constraint firstItem="2UI-yR-zPB" firstAttribute="centerY" secondItem="Rnl-hM-ecc" secondAttribute="centerY" id="ocC-Tc-2VG"/>
+                        <constraint firstItem="dEv-3F-r0T" firstAttribute="top" secondItem="Rnl-hM-ecc" secondAttribute="top" id="s7F-6b-xEm"/>
+                        <constraint firstAttribute="trailing" secondItem="QzY-hB-S2f" secondAttribute="trailing" id="xPN-0O-ciK"/>
+                        <constraint firstAttribute="bottom" secondItem="dEv-3F-r0T" secondAttribute="bottom" id="yvo-s6-IzL"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="X61-og-di8" secondAttribute="trailing" id="ASz-rO-Sw3"/>
-                <constraint firstAttribute="bottom" secondItem="X61-og-di8" secondAttribute="bottom" id="OTx-MU-NXv"/>
+                <constraint firstItem="Rnl-hM-ecc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GIz-82-7QI"/>
+                <constraint firstAttribute="bottom" secondItem="X61-og-di8" secondAttribute="bottom" constant="44" id="OTx-MU-NXv"/>
+                <constraint firstAttribute="bottom" secondItem="Rnl-hM-ecc" secondAttribute="bottom" id="Po2-ms-1mo"/>
                 <constraint firstItem="X61-og-di8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="jX3-Bu-zyU"/>
                 <constraint firstItem="X61-og-di8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="lTi-6a-wv7"/>
+                <constraint firstAttribute="trailing" secondItem="Rnl-hM-ecc" secondAttribute="trailing" id="qG2-gY-RhC"/>
             </constraints>
         </view>
     </objects>
