--- a/CYPhotoKit/CYPhotoKit/CYPhotoListViewController.xib
+++ b/CYPhotoKit/CYPhotoKit/CYPhotoListViewController.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15G24b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CYPhotoListViewController">
@@ -10,6 +9,7 @@
                 <outlet property="collectionView" destination="X61-og-di8" id="ctX-Nb-ZrR"/>
                 <outlet property="countLabel" destination="2UI-yR-zPB" id="SFf-35-bZH"/>
                 <outlet property="finishedButton" destination="lyK-V7-RZB" id="jKB-8Q-3M8"/>
+                <outlet property="maxImageLabel" destination="8XJ-Kl-hit" id="b3e-n8-Dka"/>
                 <outlet property="previewButton" destination="dEv-3F-r0T" id="xaX-vw-yWl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -32,7 +32,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rnl-hM-ecc">
                     <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dEv-3F-r0T">
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dEv-3F-r0T">
                             <rect key="frame" x="15" y="0.0" width="30" height="44"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                             <state key="normal" title="预览">
@@ -70,6 +70,12 @@
                                 <action selector="finishedButtonClick:" destination="-1" eventType="touchUpInside" id="WAP-i1-tV2"/>
                             </connections>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最多选取3张相片" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8XJ-Kl-hit">
+                            <rect key="frame" x="239" y="12" width="122" height="20"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <color key="textColor" red="0.0" green="0.67843137254901964" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -77,8 +83,10 @@
                         <constraint firstItem="lyK-V7-RZB" firstAttribute="leading" secondItem="2UI-yR-zPB" secondAttribute="trailing" constant="5" id="EDO-co-wW6"/>
                         <constraint firstItem="lyK-V7-RZB" firstAttribute="top" secondItem="QzY-hB-S2f" secondAttribute="bottom" id="JMa-G3-USn"/>
                         <constraint firstAttribute="trailing" secondItem="lyK-V7-RZB" secondAttribute="trailing" constant="15" id="OeS-tE-cze"/>
+                        <constraint firstItem="8XJ-Kl-hit" firstAttribute="centerY" secondItem="Rnl-hM-ecc" secondAttribute="centerY" id="PCt-Nx-Dzp"/>
                         <constraint firstItem="dEv-3F-r0T" firstAttribute="leading" secondItem="Rnl-hM-ecc" secondAttribute="leading" constant="15" id="T3Y-OV-ohf"/>
                         <constraint firstItem="QzY-hB-S2f" firstAttribute="top" secondItem="Rnl-hM-ecc" secondAttribute="top" id="WX4-Fx-Fe3"/>
+                        <constraint firstItem="8XJ-Kl-hit" firstAttribute="centerX" secondItem="Rnl-hM-ecc" secondAttribute="centerX" id="Xut-7o-2lB"/>
                         <constraint firstAttribute="height" constant="44" id="exW-VB-hqf"/>
                         <constraint firstItem="QzY-hB-S2f" firstAttribute="leading" secondItem="Rnl-hM-ecc" secondAttribute="leading" id="fWX-t2-ssd"/>
                         <constraint firstItem="2UI-yR-zPB" firstAttribute="centerY" secondItem="Rnl-hM-ecc" secondAttribute="centerY" id="ocC-Tc-2VG"/>
